fix contrast

--- a/public/global.css
+++ b/public/global.css
@@ -7,7 +7,7 @@
   --color-triadic-2: #dd815d;
   --color-text-strong: rgba(0, 0, 0, 95%);
   --color-text-normal: rgba(0, 0, 0, 80%);
-  --color-text-weak: rgba(0, 0, 0, 50%);
+  --color-text-weak: rgba(0, 0, 0, 65%);
   --color-text-near-primary: rgba(48, 34, 81, 80%);
   --color-inverted-text-strong: rgba(255, 255, 255, 95%);
   --color-inverted-text-normal: rgba(255, 255, 255, 80%);
